--- a/styles.css
+++ b/styles.css
@@ -14,5 +14,11 @@ p {
   width: 400px;
   margin: 50px auto;
   font: 30px Monaco,"Courier New","DejaVu Sans Mono","Bitstream Vera Sans Mono",monospace;
+  
+  background: linear-gradient(to right,#e60000,#f39800,#fff100,#009944,#0068b7,#1d2088,#920783,#e60000) 0 / 200%;
+  height: 80px;
+  animation: 5s example4 linear infinite;
 }
-
+@keyframes example4{
+  100% { background-position: 200%; }
+}
